<resources>
    <string name="app_name">Mundle</string>

    <string name="activity_title_subscribed_classes">Subscribed Classes</string>
    <string name="activity_title_create_class">Create Classroom</string>
    <string name="activity_title_add_class">Add Classroom</string>
    <string name="activity_edit_note">Edit Note</string>
    <string name="activity_new_note">New Note</string>
    <string name="activity_my_notes">My Notes</string>

    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_post">Post</string>
    <string name="button_save_note">Save Note</string>

    <string name="content_desc_auth_background">Background</string>
    <string name="content_desc_next_page">Next page</string>
    <string name="content_desc_new_assignment">New Assignment</string>
    <string name="content_desc_new_feed_post">New Feed Post</string>
    <string name="content_desc_add_classroom">Add Classroom</string>
    <string name="content_desc_create_classroom">Create Classroom</string>
    <string name="content_desc_create_note">Create Note</string>

    <string name="card_view_classrooms">Classrooms</string>
    <string name="card_view_notes">Notes</string>
    <string name="card_view_feed">Feed</string>
    <string name="card_view_assignments">Assignments</string>
    <string name="card_view_projects">Projects</string>
    <string name="card_view_members">Members</string>

    <string name="authentication_hint_username">Username</string>
    <string name="authentication_hint_password">Password</string>

    <string name="authentication_checkbox_teacher">Are you a teacher?</string>

    <string name="authentication_button_label_login">Login</string>
    <string name="authentication_button_label_register">Register</string>

    <string name="edit_text_hint_create_class_id">Classroom ID (e.g. CSCI 2000)</string>
    <string name="edit_text_hint_create_class_name">Classroom Name (e.g. Data Structures)</string>
    <string name="edit_text_hint_create_feed_title">Post Title</string>
    <string name="edit_text_hint_create_feed_content">Post Content</string>
    <string name="edit_text_hint_set_first_name">First Name</string>
    <string name="edit_text_hint_set_last_name">Last Name</string>
    <string name="edit_text_hint_username">Username</string>
    <string name="edit_text_hint_note_title">Note Title</string>
    <string name="edit_text_hint_note_content">Note Content</string>
    <string name="edit_text_hint_assign_title">Assignment Title</string>
    <string name="edit_text_hint_assign_content">Assignment Content</string>

    <string name="text_view_assignment_open">(Opened)</string>
    <string name="text_view_assignment_closed">(Closed)</string>
    <string name="text_view_name_unset">[No Name Set]</string>
    <string name="text_view_instructor_label">Instructor: </string>

    <string name="notify_new_assign">A new assignment has been posted in</string>
    <string name="notify_new_project">A new project has been posted in</string>
    <string name="notify_new_feed_post">A new feed message has been posted in</string>

    <string name="other_change_pass">Change Password</string>
    <string name="other_set_name">Set Your Name</string>
    <string name="other_save_name">Save Name</string>
    <string name="other_delete_account">Delete Account</string>

    <string name="label_widget_text_view_last_username">Last Username:</string>
    <string name="label_widget_text_view_classes_subbed">Classes Subscribed: </string>
    <string name="label_widget_text_view_notes">Notes:</string>

    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_item_change_pass">Change Password</string>
    <string name="menu_item_set_name">Set Your Name</string>
    <string name="menu_item_close_account">Close Account</string>

    <string name="content_warning_activity_close_account">Are you sure you wish to close your account? All of your data, subscriptions, and notes associated with your ID will be removed from the server. There is no reversing this action.</string>
    <string name="content_change_password">Are you sure you want to change your password? This new password will take effect on your next login!</string>
    <string name="content_new_note_saved">Your new note has been saved!</string>
    <string name="content_failed_save_new_note">Failed to save your new note:</string>
    <string name="content_existing_note_saved">Your note has been saved!</string>
    <string name="content_failed_save_existing_note">Failed to save:</string>
    <string name="content_failed_open_classroom">Failed to open classroom:</string>
    <string name="content_no_subscribers">Unable to find subscribers.</string>
    <string name="content_saved_new_class">Saved your new classroom!</string>
    <string name="content_failed_save_class">There was an issue saving your new class:</string>
    <string name="content_sub_class_failed">Unable to subscribe to classroom:</string>
    <string name="content_sub_class_failed_current">"Unable to subscribe to classroom: You are already in this class!"</string>
    <string name="content_failed_login_is_teacher">"Failed to Login: Are you a teacher?"</string>
    <string name="content_failed_login">Failed to Login:</string>
    <string name="content_failed_register">Failed to Register:</string>
    <string name="content_failed_password_empty">Please enter a new password.</string>
    <string name="content_failed_set_new_password">Unable to set password:</string>
    <string name="content_deleted_account">Your account has been deleted.</string>
    <string name="content_delete_account_disabled">Unable to delete account, account deletions disabled.</string>
    <string name="content_delete_account_check_fail">Unable to delete account, username mismatch.</string>

    <string name="add_widget">Add widget</string>
</resources>
