<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.nsreverse.mundle.ui.notes.EditNoteActivity"
    android:orientation="vertical"
    android:padding="@dimen/other_default_half">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_note_title"
            android:hint="@string/edit_text_hint_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edit_text_note_content"
        android:hint="@string/edit_text_hint_note_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="@integer/weight_one"
        android:gravity="top"/>

    <Button
        android:id="@+id/button_save_note"
        android:text="@string/button_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>