<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.nsreverse.mundle.ui.classrooms.CreateAssignmentActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/other_default_half">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_assign_title"
                android:hint="@string/edit_text_hint_assign_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/edit_text_assign_content"
            android:hint="@string/edit_text_hint_assign_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/other_default_half"
            android:layout_marginBottom="@dimen/other_default_half">

            <DatePicker
                android:id="@+id/date_picker_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/button_save_assign_post"
            android:text="@string/button_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
