<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widget_text_view_label_1"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/widget_text_view_margin_label_1"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/widget_text_view_label_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_widget_text_view_last_username"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:layout_weight="@integer/weight_one"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:id="@+id/widget_text_view_last_username"
                tools:text="admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:textColor="@android:color/tertiary_text_dark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_widget_text_view_classes_subbed"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:layout_weight="@integer/weight_one"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:id="@+id/widget_text_view_class_count"
                tools:text="6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:textColor="@android:color/tertiary_text_dark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_widget_text_view_notes"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:layout_weight="@integer/weight_one"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:id="@+id/widget_text_view_note_count"
                tools:text="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:textColor="@android:color/tertiary_text_dark"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>