<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.nsreverse.mundle.ui.SelectedClassroomActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_class_feed"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginBottom="@dimen/card_view_margin_bottom"
                android:layout_weight="@integer/weight_one">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_default">

                    <ImageView
                        android:id="@+id/image_view_classrooms"
                        android:src="@drawable/ic_rss_feed_gray_24dp"
                        android:layout_width="@dimen/card_view_image_width"
                        android:layout_height="@dimen/card_view_image_height"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:contentDescription="@string/card_view_feed"/>

                    <TextView
                        android:text="@string/card_view_feed"
                        android:layout_below="@id/image_view_classrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_class_assignments"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_weight="@integer/weight_one">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_default">

                    <ImageView
                        android:id="@+id/image_view_assignments"
                        android:src="@drawable/ic_assignment_gray_24dp"
                        android:layout_width="@dimen/card_view_image_width"
                        android:layout_height="@dimen/card_view_image_height"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:contentDescription="@string/card_view_assignments"/>

                    <TextView
                        android:text="@string/card_view_assignments"
                        android:layout_below="@id/image_view_assignments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_class_projects"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginBottom="@dimen/card_view_margin_bottom"
                android:layout_weight="@integer/weight_one">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_default">

                    <ImageView
                        android:id="@+id/image_view_projects"
                        android:src="@drawable/ic_project_gray_24dp"
                        android:layout_width="@dimen/card_view_image_width"
                        android:layout_height="@dimen/card_view_image_height"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:contentDescription="@string/card_view_projects"/>

                    <TextView
                        android:text="@string/card_view_projects"
                        android:layout_below="@id/image_view_projects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_class_members"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_weight="@integer/weight_one">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_default">

                    <ImageView
                        android:id="@+id/image_view_members"
                        android:src="@drawable/ic_person_gray_24dp"
                        android:layout_width="@dimen/card_view_image_width"
                        android:layout_height="@dimen/card_view_image_height"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:contentDescription="@string/card_view_members"/>

                    <TextView
                        android:text="@string/card_view_members"
                        android:layout_below="@id/image_view_members"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>